1.0200 2011-03-15
 - Made Digest::SHA an optional component. Thanks to Mark Carey.
 - Added the ability to publish checkins to Facebook.

1.0100 2011-01-04
 - Added Facebook::Graph::Query::from. Inspired by a pull request from Dan 
  Magnuszewski.

1.0000 2010-12-09
 - Updated recipe2 example to use more modern Dancer features.
 - Merged POD patch from fayland.
 - Can now post posts and events directly to other pages you control without 
  switching access tokens.
 - Added set_source(), set_privacy(), set_actions(), add_actions(),
  set_target_countries(), set_target_cities(), set_target_regions(), and
  set_target_locales to Facebook::Graph::Publish::Post.
 - Changed get_post_params() in Facebook::Graph::Publish to return an array ref
  instead of a hash ref.
 - Now requires Exception::Class.
 
 NOTE: This version is not backward compatible with previous versions because
 the get_post_params() method in Facebook::Graph::Publish now returns an array
 ref rather than a hash ref. However, if you didn't extend this module, then you
 likely aren't calling this method anywhere, so for you the module will remain
 backward compatible. This is the reason for the major version number increase.

 NOTE2: This version is not backward compatible with previous versions because
 we are no longer throwing array based exceptions. Instead the exceptions are
 Exception::Class based. If you don't care about exception formatting then this 
 module will still be backward compatible for you.

0.0705 2010-09-26
 - Missed a spot in 0.0704.

0.0704 2010-09-26
 - Fixed a problem with access token encoding. 

0.0703 2010-09-26
 - Documented Response's as_string method.
 - Facebook changed their damn API yet again, so that is now fixed, AGAIN!

0.0702 September 1, 2010
 - Facebook changed their API slightly and it broke stuff, so that is now fixed.
 - Added link to the cookbook from the main page.

0.0701 August 17, 2010